samples/_failures_safe/1761191784_eb1a47_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a48dc279.c: In function ‘main’:
./samples/SAFE/__tmp_a48dc279.c:144:16: error: missing terminating " character
  144 |         printf("3. Transpose matrix 1
      |                ^~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_a48dc279.c:144:9: error: expected expression at end of input
  144 |         printf("3. Transpose matrix 1
      |         ^~~~~~
./samples/SAFE/__tmp_a48dc279.c:144:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a48dc279.c:144:9: error: expected declaration or statement at end of input
